@@ -4,8 +4,8 @@ pyramid_deform
 ``pyramid_deform`` provides bindings for the Pyramid web framework to the
 `Deform <http://docs.repoze.org/deform>`_ form library.
 
-For more information, see `the Pylons Project website
-<http://docs.pylonshq.com>`_.
+For more information, see `the documentation
+<http://docs.pylonsproject.org/projects/pyramid_deform/en/latest/>`_.
 
 
 
