@@ -6,11 +6,14 @@
 # decrement_step
 # increment_step
 
+import os
 import unittest
-
+import shutil
+import tempfile
 from mock import patch
 from mock import Mock
 from pyramid import testing
+from pyramid.exceptions import ConfigurationError
 
 class TestFormView(unittest.TestCase):
     def _getTargetClass(self):
@@ -469,6 +472,97 @@ class TestCRSFSchema(unittest.TestCase):
         inst2 = inst.bind(request=request)
         self.assertEqual(inst2.deserialize({'csrf_token':'csrf_token'}),
                          {'csrf_token': 'csrf_token'})
+
+class TestSessionFileUploadTempStore(unittest.TestCase):
+    def setUp(self):
+        self.tempdir = tempfile.mkdtemp()
+
+    def tearDown(self):
+        shutil.rmtree(self.tempdir)
+        
+    def _getTargetClass(self):
+        from pyramid_deform import SessionFileUploadTempStore
+        return SessionFileUploadTempStore
+
+    def _makeOne(self, request):
+        return self._getTargetClass()(request)
+
+    def _makeRequest(self):
+        request = DummyRequest()
+        request.registry.settings = {}
+        request.registry.settings['pyramid_deform.tempdir'] = self.tempdir
+        return request
+
+    def test_no_tempdir_in_settings(self):
+        request = DummyRequest()
+        request.registry.settings = {}
+        self.assertRaises(ConfigurationError, self._makeOne, request)
+
+    def test_preview_url(self):
+        request = self._makeRequest()
+        inst = self._makeOne(request)
+        self.assertEqual(inst.preview_url(None), None)
+
+    def test_contains_true(self):
+        request = self._makeRequest()
+        inst = self._makeOne(request)
+        inst.tempstore['a'] = 1
+        self.assertTrue('a' in inst)
+        
+    def test_contains_false(self):
+        request = self._makeRequest()
+        inst = self._makeOne(request)
+        self.assertFalse('a' in inst)
+
+    def test_setitem_stream_None(self):
+        request = self._makeRequest()
+        inst = self._makeOne(request)
+        inst['a'] = {}
+        self.assertEqual(inst.tempstore['a'], {})
+        self.assertTrue(request.session._changed)
+
+    def test_setitem_stream_file(self):
+        request = self._makeRequest()
+        inst = self._makeOne(request)
+        here = os.path.dirname(__file__)
+        thisfile = os.path.join(here, 'tests.py')
+        inst['a'] = {'fp':open(thisfile, 'rb')}
+        self.assertTrue(inst.tempstore['a']['fp'].startswith(self.tempdir))
+        self.assertTrue(open(inst.tempstore['a']['fp'], 'rb').read(),
+                        open(thisfile, 'rb').read())
+        self.assertTrue(request.session._changed)
+
+    def test_get_data_None(self):
+        request = self._makeRequest()
+        inst = self._makeOne(request)
+        self.assertEqual(inst.get('a', True), True)
+
+    def test_get_nonbasestring_fp(self):
+        request = self._makeRequest()
+        inst = self._makeOne(request)
+        inst.tempstore['a'] = {'fp':True}
+        self.assertEqual(inst.get('a'), {'fp':True})
+
+    def test_get_basestring_fp(self):
+        request = self._makeRequest()
+        inst = self._makeOne(request)
+        here = os.path.dirname(__file__)
+        thisfile = os.path.join(here, 'tests.py')
+        inst.tempstore['a'] = {'fp':thisfile}
+        self.assertEqual(inst.get('a')['fp'].read(),
+                         open(thisfile, 'rb').read())
+
+    def test___getitem___notfound(self):
+        request = self._makeRequest()
+        inst = self._makeOne(request)
+        self.assertRaises(KeyError, inst.__getitem__, 'a')
+        
+    def test___getitem___found(self):
+        request = self._makeRequest()
+        inst = self._makeOne(request)
+        inst.tempstore['a'] = {}
+        self.assertEqual(inst['a'], {})
+        
         
 class DummyForm(object):
     def __init__(self, schema, buttons=None, use_ajax=False, ajax_options=''):
